[package]
name = "example-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent = { path = "../../silent" }
serde = { version = "1.0.200", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
async-trait = "0.1.80"
