[package]
name = "tokio-tungstenite_test"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.29"
futures-util = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
