[package]
name = "examples-wasm"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = "1.2.1"
serde = "1.0.209"
silent = { path = "../../silent", default-features = false, features = ["wasm"] }
